hphp/hack/test/typecheck/reified_generics/reified-generic-as-param.php.exp
File "reified-generic-as-param.php", line 3, characters 25-33:
Invalid place to put reified (Parsing[1002])
