hphp/hack/test/typecheck/reified_generics/reified-generic-as-param.php
<?hh

function f<reified T>(C<reified T> $x) {}
